--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,10 @@
   color: #61dafb;
 }
 
+.ant-modal-wrap {
+  z-index: 100000000000000 !important;
+}
+
 .input-field {
   background: rgb(231, 238, 245) !important;
   border: 1px solid rgb(231, 239, 248) !important;
