--- a/src/Screens/Certificates/LyftCertificate.css
+++ b/src/Screens/Certificates/LyftCertificate.css
@@ -194,16 +194,28 @@
   color: black;
   margin-left: 5px;
 }
-.form-checkbox {
-  margin-left: 20px !important;
-  width: 50%;
-  margin-top: 4px !important;
-  font-size: 16px !important;
-  font-style: normal !important;
-  font-weight: 400 !important;
-  line-height: 23px !important;
-  letter-spacing: 0em !important;
-  color: black !important;
+.form-checkbox-fixone {
+  width: 15px;
+  margin-top: 4px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23px;
+  letter-spacing: 0em;
+  color: black;
+  margin-right: 5px;
+  margin-left: -70px;
+}
+.form-checkbox-fix {
+  width: 15px;
+  margin-top: 4px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23px;
+  letter-spacing: 0em;
+  color: black;
+  margin-right: 5px;
 }
 
 .form-chexbox-container {
@@ -283,13 +295,14 @@
   color: #716e6e;
 }
 .vehicle-inspection_chexbox {
-  text-align: center;
-  margin-top: 15px;
+  margin-top: 24px;
+  margin-left: 40px;
+  width: 14px;
 }
 .vehicle-inspection_chexboxtwo {
-  text-align: left;
-  margin-top: 15px;
-  margin-left: 7px;
+  margin-top: 24px;
+  width: 14px;
+  margin-left: 10px;
 }
 .doted-border-box {
   border-style: dashed;
@@ -330,6 +343,7 @@
   letter-spacing: 0em;
   text-align: left;
   color: black;
+  margin-top: 15px;
 }
 .circle-one-text {
   font-size: 18px;
@@ -374,6 +388,7 @@
   color: black;
   margin-top: 20px;
 }
+
 .no-text {
   font-size: 20px;
   font-style: normal;
@@ -470,6 +485,15 @@
   border: 8px solid green;
   width: 70px;
   height: 70px;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.pass-circle {
+  border: 5px solid green;
+  width: 57px;
+  height: 57px;
   border-radius: 50px;
   display: flex;
   align-items: center;
