--- a/src/Components/InspectionCard/style.css
+++ b/src/Components/InspectionCard/style.css
@@ -17,6 +17,7 @@
   align-items: center;
   background-color: white;
   width: 90px;
+  flex-direction: column;
   height: 90px;
   border-radius: 60%;
   margin-bottom: 20px;
@@ -45,8 +46,8 @@
 }
 
 .inspection-image {
-  width: 100%;
-  height: 95px;
+  width: 103%;
+  height: 145px;
   border-radius: 10px;
 }
 
