--- a/src/Components/LyftConfirmationModal/style.css
+++ b/src/Components/LyftConfirmationModal/style.css
@@ -14,6 +14,12 @@
   font-size: 25px;
   font-weight: 500;
   color: black;
+  text-align: center;
+}
+
+.lyft-user-heading {
+  font-size: 27px;
+  font-weight: bold;
 }
 
 .register-modal-btn {
