--- a/src/Screens/Certificates/LyftCertificate.css
+++ b/src/Screens/Certificates/LyftCertificate.css
@@ -259,7 +259,7 @@
   color: #716e6e;
 }
 .pass-text {
-  font-size: 18px;
+  font-size: 15px;
   font-style: normal;
   font-weight: 500;
   line-height: 21px;
@@ -268,7 +268,7 @@
   color: #716e6e;
 }
 .fail-text {
-  font-size: 18px;
+  font-size: 15px;
   font-style: normal;
   font-weight: 500;
   line-height: 21px;
@@ -463,7 +463,6 @@
   text-align: left;
   color: #47484f;
   /* margin-left: 20px; */
-  text-transform: uppercase;
 }
 .inspector-only-input {
   border-bottom: 1px solid black !important;
@@ -492,8 +491,8 @@
 }
 .pass-circle {
   border: 5px solid green;
-  width: 57px;
-  height: 57px;
+  width: 62px;
+  height: 62px;
   border-radius: 50px;
   display: flex;
   align-items: center;
@@ -523,4 +522,13 @@
   text-align: left;
   color: #191a1b;
   margin-bottom: 0;
+}
+
+.margin-top-container {
+  margin-top: 110px;
+}
+
+.border-right-Container {
+  padding-left: 7.5px;
+  padding-right: 7.5px;
 }
