--- a/src/Screens/VehicleAfterReviewingScreen/style.css
+++ b/src/Screens/VehicleAfterReviewingScreen/style.css
@@ -93,6 +93,24 @@
     display: flex;
     align-items: center;
   }
+  .camera_img_container{
+    margin-left: 30px;
+    margin-top: 5px;
+    position: absolute;
+    left: 0;
+  }
+  .img_container{
+      height: 200px;
+      width: 300px 
+  }
+  .produc-card-bg_file{
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 450px;
+    height: 300px;
+    margin-top: 20px;
+    position: relative;
+  }
   .checked-icon-container{
     background-color: #75BA5C;
     width: 22px;
@@ -122,4 +140,28 @@
   letter-spacing: 0em;
   text-align: left;
   
+  }
+
+  .instruction-modalls .after-review-in-screen .ant-modal-close{
+    right: -22% !important;
+
+  }
+
+  @media only screen and (max-width: 600px) {
+
+    .instruction-modalls .after-review-in-screen .ant-modal-close{
+    right: -8% !important;
+    }
+  .produc-card-bg_file{
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
+    position: relative;
+  }
+  .img_container{
+    height: 100%;
+    width: 100% 
+}
   }
