--- a/src/Screens/VehicleAfterReviewingScreen/style.css
+++ b/src/Screens/VehicleAfterReviewingScreen/style.css
@@ -94,7 +94,7 @@
     align-items: center;
   }
   .camera_img_container{
-    margin-left: 30px;
+    margin-left: 10px;
     margin-top: 5px;
     position: absolute;
     left: 0;
@@ -143,25 +143,27 @@
   }
 
   .instruction-modalls .after-review-in-screen .ant-modal-close{
-    right: -22% !important;
-
+    right: -30% !important;
+    top: -5% !important;
   }
 
   @media only screen and (max-width: 600px) {
-
     .instruction-modalls .after-review-in-screen .ant-modal-close{
-    right: -8% !important;
+      right: -8% !important;
     }
-  .produc-card-bg_file{
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 100%;
-    height: 100%;
-    margin-top: 20px;
-    position: relative;
-  }
-  .img_container{
-    height: 100%;
-    width: 100% 
-}
+    .produc-card-bg_file{
+      background-repeat: no-repeat;
+      background-size: contain;
+      width: 100%;
+      height: 100%;
+      margin-top: 20px;
+      position: relative;
+    }
+    .img_container{
+      height: 100%;
+      width: 100% 
+    }
+    .camera_img_container {
+      margin-left: 30px;
+    }
   }
